# twin4dem

./: .gitignore  README.md  docker-bake.hcl  docker-compose.common.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  package-lock.json  pyproject.toml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/notebooks/: stats-demo.ipynb
backend/script/: server
backend/src/: manage.py
backend/src/api/: urls.py  views.py
backend/src/api/fields/: __init__.py  _sv_field.py
backend/src/api/serializers/: __init__.py  _base.py  _executive.py  _judiciary.py  _legislative.py  _party_settings.py  _simulation.py  _simulation_log.py  _user_settings.py
backend/src/api/services/: __init__.py  _base.py  _batch_simulation.py  _random.py  _random_simulation.py  _weights.py
backend/src/api/viewsets/: __init__.py  _simulation.py
backend/src/common/: apps.py
backend/src/common/admin/: __init__.py  _settings.py
backend/src/common/dto/: __init__.py  _basic.py  _event.py  _input.py  _result.py
backend/src/common/fields/: __init__.py  _sv_field.py
backend/src/common/migrations/: 0001_initial.py  0002_cabinet_minister_ministerlink_and_more.py  0003_cabinet_government_probability_for_and_more.py  0003_simulation_government_probability_for_and_more.py  0004_minister_weights_and_more.py  0005_memberofparliament_parliament_and_more.py  0006_court_judge_judgelink_and_more.py  0007_simulationlogentry_simulationsubmodellogentry_and_more.py  0008_rename_ix_simulation_submodel_log_additional_info_ix_ssl_additional_info.py  0009_add_belief_fields.py  0010_aggrandisementbatch_aggrandisementunit_judgebelief_and_more.py  0011_aggrandisementbatch_file_name.py
backend/src/common/models/: __init__.py  _aggrandisement.py  _belief.py  _executive.py  _influence.py  _judiciary.py  _legislative.py  _settings.py  _simulation.py
backend/src/common/signals/: __init__.py  _user.py
backend/src/simulator/: tasks.py
backend/src/simulator/adapters/: __init__.py  _base.py  _factory.py
backend/src/simulator/common/: __init__.py  _agent.py  _typevars.py
backend/src/simulator/config/: __init__.py  _adapter.py  _council.py  _factory.py  _government.py  _judge.py  _minister.py  _mp.py  _parliament.py
backend/src/simulator/db/: __init__.py  _adapter.py  _factory.py
backend/src/simulator/executive/: __init__.py  _government.py  _minister.py
backend/src/simulator/judiciary/: __init__.py  _council.py  _judge.py
backend/src/simulator/legislative/: __init__.py  _mp.py  _parliament.py
backend/src/simulator/model/: agent.py  config.py
backend/src/simulator/persistence/: __init__.py  _base.py  _factory.py  _simulation.py
backend/src/simulator/serialization/: pydantic_serializer.py
backend/src/twin4dem/: asgi.py  celery.py  settings.py  settings_dev.py  urls.py  urls_dev.py  wsgi.py
backend/src/web/: consumers.py  routing.py  urls.py
backend/src/web/channels/: __init__.py  _base_consumer.py  _simulation.py
backend/src/web/templates/: base.html
backend/static/frontend/.vite/: manifest.json
backend/static/frontend/assets/: main-B_-OTAsf.js
backend/tests/: conftest.py  settings.py
backend/tests/api/: conftest.py  test_settings.py  test_simulation.py  test_simulation_log.py
backend/tests/api/services/: test_batch_simulation.py
backend/tests/common/fields/: test_sv_field.py
backend/tests/common/models/: conftest.py  test_executive.py  test_judiciary.py  test_legislative.py  test_simulation.py  test_simulation_log.py  test_user_settings.py
backend/tests/data/: judiciary.json  legislative.json  scenario1.json  scenario2.json  scenario3.json
backend/tests/data/aggrandisement-batches/: one-unit.json
backend/tests/data/events/: step_finished.valid.json
backend/tests/data/fixtures/: user_data.json  user_settings.json
backend/tests/data/government/: step_output.valid.json
backend/tests/simulator/: conftest.py  test_count_task.py  test_decide_and_dispatch_task.py  test_executive_submodel_task.py  test_government_task.py  test_judiciary_task.py  test_models_flow.py  test_parliament_task.py  test_persistence_layer.py  test_pydantic_serializer.py  test_run_simulation_task.py  test_send_result_to_channel.py  test_simulation_flow.py  test_subsequent_submodel.py
backend/tests/simulator/db/: test_government_db_adapter.py  (+2 more)
backend/tests/web/: conftest.py  test_routing.py
(+97 files in other folders)
