[project]
name = "toy-dt-v2"
version = "0.1.0"
description = "TWIN4DEM as a Django web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "case-switcher>=1.3.13",
    "celery>=5.6.0",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.0",
    "django-allauth[socialaccount]>=65.13.1",
    "django-pydantic-field>=0.5.1",
    "django-sass-processor>=1.4.2",
    "django-vite>=3.1.0",
    "djangorestframework>=3.16.1",
    "jwt>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[tool.uv]
package = true

[tool.uv.build-backend]
namespace = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
addopts = "--cov=src --cov-branch --cov-report xml:./coverage.xml --cov-report term-missing:skip-covered"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.(pyi?|ipynb)$'

[tool.ruff.lint.per-file-ignores]
"src/twin4dem/settings_dev.py" = ["F403", "F405"]

[dependency-groups]
dev = [
    "black[jupyter]>=25.12.0",
    "django-browser-reload>=1.21.0",
    "django-compressor>=4.6.0",
    "django-debug-toolbar>=6.1.0",
    "django-watchfiles>=1.4.0",
    "libsass>=0.23.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.9",
    "types-channels>=4.3.0.20250822",
]
prod = []
notebooks = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
]
